@@ -358,11 +358,12 @@ if (isset($_POST['assignment'])) {
                     'prodid' => $a['prodid'],
                     'type' => $a['type'],
                     'netvalue' => str_replace(',', '.', $a['netvalue']),
+                    'note' => htmlspecialchars($a['note']),
                     SYSLOG::RES_LIAB => $a['liabilityid']
                 );
                 $DB->Execute(
                     'UPDATE liabilities SET value = ?, flags = ?, taxcategory = ?, currency = ?, name = ?,
-                    taxid = ?, prodid = ?, type = ?, netvalue = ?
+                    taxid = ?, prodid = ?, type = ?, netvalue = ?, note = ?
                     WHERE id = ?',
                     array_values($args)
                 );
@@ -383,10 +384,11 @@ if (isset($_POST['assignment'])) {
                 'prodid' => $a['prodid'],
                 'type' => $a['type'],
                 'netvalue' => str_replace(',', '.', $a['netvalue']),
+                'note' => htmlspecialchars($a['note']),
             );
             $DB->Execute(
-                'INSERT INTO liabilities (name, value, flags, taxcategory, currency, taxid, prodid, type, netvalue)
-                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)',
+                'INSERT INTO liabilities (name, value, flags, taxcategory, currency, taxid, prodid, type, netvalue, note)
+                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)',
                 array_values($args)
             );
 
@@ -416,6 +418,7 @@ if (isset($_POST['assignment'])) {
             'backwardperiod' => isset($a['backwardperiod']) ? 1 : 0,
             'at' => $at,
             'count' => $count,
+            'note' => htmlspecialchars($a['note']),
             'invoice' => isset($a['invoice']) ? intval($a['invoice']) : 0,
             'separatedocument' => isset($a['separatedocument']) ? 1 : 0,
             'settlement' => !isset($a['settlement']) || empty($a['settlement']) ? 0 : 1,
@@ -432,7 +435,7 @@ if (isset($_POST['assignment'])) {
         );
 
         $DB->Execute('UPDATE assignments SET tariffid=?, customerid=?, attribute=?, period=?,
-            backwardperiod=?, at=?, count=?,
+            backwardperiod=?, at=?, count=?, note=?,
 			invoice=?, separatedocument=?, settlement=?, datefrom=?, dateto=?, pdiscount=?, vdiscount=?,
 			liabilityid=?, numberplanid=?, paytime = ?, paytype=?, recipient_address_id=?
 			WHERE id=?', array_values($args));
@@ -503,7 +506,7 @@ if (isset($_POST['assignment'])) {
     $a = $DB->GetRow(
         'SELECT a.id AS id, a.customerid, a.tariffid, a.period, a.backwardperiod,
         a.at, a.count, a.datefrom, a.dateto, a.numberplanid, a.paytime, a.paytype,
-        a.invoice, a.separatedocument,
+        a.invoice, a.separatedocument, a.note,
         liabilities.type,
         (CASE WHEN liabilityid IS NULL
             THEN (CASE WHEN tariffs.flags & ? > 0 THEN 1 ELSE 0 END)
