@@ -168,6 +168,7 @@
 	var assignmentGrossvalue = '{$assignment.value}';
 	var assignmentNetvalue = '{$assignment.netvalue}';
 	var assignmentNetflag = '{$assignment.netflag}';
+	var assignmentNote = '{$assignment.note}';
 	var assignmentTaxid = '{$assignment.taxid}';
 	var assignmentTariffId = '{$assignment.tariffid}';
 
